--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}*/
+@import url('https://fonts.googleapis.com/css?family=Poiret+One&subset=latin-ext');
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: 'Poiret One', cursive;
 }
